[metadata]
name = b_psp
version = 0.0.1
author = Srijan Bharati Das
author_email = srijanbdas@alumni.princeton.edu
description = Github 101 and a bit more using PSP magnetic fields
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
keywords = Fun, Education, Learning, Programming

[options]
package_dir =
    = src
packages = find:
python_requires = ==3.11.5
tests_require = pytest

[options.extras_require]
docs = 
    sphinx 
    sphinx-rtd-theme
tests = pytest; py

[options.packages.find]
where = src